--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -68,14 +68,14 @@
     </style>
 
     <style name="LoginBody" parent="@android:style/Widget.TextView">
-        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">@dimen/login_body_font_size</item>
         <item name="android:gravity">center</item>
     </style>
 
     <style name="LoginTerms" parent="LoginBody">
-        <item name="android:fontFamily">sans-serif-condensed-light</item>
+        <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">@dimen/small</item>
     </style>
