removing made up stuff

--- a/res/layout-land/route_preview.xml
+++ b/res/layout-land/route_preview.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_paddingTop="8dp" />
+            android:paddingTop="8dp" />
 
         <RadioGroup
             android:id="@+id/routing_mode"
