--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -32,6 +32,17 @@
             android:background="@android:color/transparent"
             android:visibility="gone" />
 
+        <TextView
+            android:id="@+id/route_attribution"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:paddingRight="@dimen/attribution_padding_right"
+            android:paddingBottom="@dimen/attribution_padding_bottom"
+            android:text="@string/osm_attribution"
+            android:textSize="@dimen/tiny" />
+
         <com.mapzen.open.widget.DebugView
                 android:id="@+id/debugging"
                 android:layout_width="match_parent"
@@ -45,8 +56,7 @@
         android:id="@+id/footer_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="top"
-        android:orientation="horizontal">
+        android:layout_gravity="top">
 
         <View
             android:id="@+id/drag_area"
