--- a/res/layout/base.xml
+++ b/res/layout/base.xml
@@ -18,10 +18,10 @@
     <ImageButton
         android:id="@+id/locate_button"
         android:src="@drawable/ic_locate_button"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="@dimen/locate_button_width"
+        android:layout_height="@dimen/locate_button_height"
+        android:layout_marginRight="@dimen/locate_button_margin_right"
+        android:layout_marginBottom="@dimen/locate_button_margin_bottom"
         android:layout_above="@id/pager_results_container"
         android:layout_alignParentRight="true"
         android:onClick="locateButtonAction"
