Shows basic empty view when no recent searches

--- a/res/layout/base.xml
+++ b/res/layout/base.xml
@@ -83,4 +83,14 @@
         android:paddingTop="?attr/actionBarSize"
         android:visibility="gone" />
 
+    <TextView
+        android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:paddingTop="?attr/actionBarSize"
+        android:text="No recent searches"
+        android:visibility="gone" />
+
 </RelativeLayout>
