--- a/res/layout/direction_list_item.xml
+++ b/res/layout/direction_list_item.xml
@@ -6,6 +6,8 @@
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:orientation="horizontal">
 
     <ImageView
